styles/style.css
@font-face {
    font-family: 'NeoSansProLight';
    src: url('neosanspro-light-webfont.eot');
    src: url('neosanspro-light-webfont.eot?#iefix') format('embedded-opentype'),
         url('neosanspro-light-webfont.woff') format('woff'),
         url('neosanspro-light-webfont.ttf') format('truetype'),
         url('neosanspro-light-webfont.svg#NeoSansProLight') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'NeoSansProBlack';
    src: url('neosanspro-black-webfont.eot');
    src: url('neosanspro-black-webfont.eot?#iefix') format('embedded-opentype'),
         url('neosanspro-black-webfont.woff') format('woff'),
         url('neosanspro-black-webfont.ttf') format('truetype'),
         url('neosanspro-black-webfont.svg#NeoSansProBlack') format('svg');
    font-weight: bold;
    font-style: normal;
}

/*---Default elements---*/
a {margin: 0; padding: 0; font-size: 100%; vertical-align: baseline;}
a:hover, a:focus {outline: none;}
a img {border: none;}
img {vertical-align: middle;}
.menu {list-style: none; padding: 0; margin: 0;}
h1, h2, h3, h4, h5, h6 {font-weight: normal; margin: 13px 0;}
h2 strong, h3 strong {color: #000;}
table {border-collapse: collapse; border-spacing: 0;}
td, td img {vertical-align: top;}
hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0; }
form {margin: 0;}
.form-row input.text, .form-row label {display: inline-block; float: left;} 
input.submit, button, label {cursor: pointer;}
label.for-checkbox, label.for-radio {width: auto; cursor: pointer}
button, input, select, textarea {margin: 0;}
input.radio, input.checkbox {vertical-align: text-bottom; margin: 0;}
input.text, input.password, textarea {padding: 4px 6px; background: #171717; border: 1px solid #171717;}
input.text, input.password, input.text, textarea, select, button, input.submit {font-family: Arial, Helvetica, sans-serif;}
button {width: auto; overflow: visible;}

/*---Helpers---*/
.fl {float: left;}
.fr {float: right;}
.tar {text-align: right;}
.tac {text-align: center;}
.tal {text-align: left;}

.cols-2 .col {width: 48%;} 
 
/*---Site structure---*/
html {font-family: Arial, Helvetica, sans-serif; color: #575757; font-size: 13px; background: url(../images/bg.png);}
body {margin: 0;}
nav, aside {display: block;} 
 
h1, h2, h3, .icon, label, .shedule, .person, .button, #main-menu a {font-family:'HelveticaNeueLTPro45Light'}
h1 strong, h2 strong, h3 strong {font-family:'HelveticaNeueLTPro75Bold'; white-space: nowrap;}

/*Header content*/ 
.logo {display: inline-block; padding-right: 50px; position: fixed; right: 0; top: 40px;}
#menu {background: url(../images/navigation_bg.png) no-repeat; width: 498px; height: 40px; position: fixed; left: 45px; top: 60px; padding: 10px 0 0 40px;}
#menu li {display: inline; list-style-type: none; color: #6e6e6e;}
#menu li:after {content:" / "}
#menu li:last-child:after {content: "";}
#menu li a {color: #ffffff;padding-right: 20px;padding-left: 20px;}
#menu li a.active {color: #ffb200; text-decoration: none;}

/*Slides*/
.slide-parent {padding:1px 0; position: relative; z-index: 0;} 
.slide-parent .anchor {position: absolute; top: 0px; right: 50%;}
.slide {padding: 10px 0;}
.slide-inner {width: 800px; margin: 0px auto;} 
.slide h1 {font-family: "NeoSansProLight"; font-size: 30px; margin-bottom: 25px; color: #7e7e7e;}

/*Features*/
.feature {padding-left: 120px; width: 280px; height: 170px; float: left; color: #767676;}
.feature h2 {margin-top: 0; color: #2e2e2e; font-family: "NeoSansProBlack"; font-size: 24px; text-transform: uppercase;}
.automatic {background: url(../images/features_icon3.png) no-repeat;}
.up-to-date {background: url(../images/features_icon2.png) no-repeat;}
.flexible {background: url(../images/features_icon4.png) no-repeat;}
.full-api-access {background: url(../images/features_icon1.png) no-repeat;}

/*Footer content*/ 
#creator {display: inline-block; padding-right: 30px; position: fixed; right: 0; bottom: 30px;}
#creator img {margin-right: 10px;}
#creator div {width: 100px; display: inline-block; vertical-align: middle; color: #626262; font-size: 14px;}
#creator a {color: #626262; font-weight: bold; text-decoration: none;}

#copyright {display: inline-block; padding-right: 50px; position: fixed; left: 0; bottom: 40px;}
#copyright li {display: inline; list-style-type: none; font-size: 14px;}
#copyright li:after {content:"\00B7"}
#copyright li:last-child:after {content: "";}
#copyright li span {padding-right: 8px;padding-left: 8px;}
#copyright li a {color: #575757; font-weight: bold;}

/*---Clearfix---*/
.clearfix:before, .clearfix:after, .form-row:before, .form-row:after {content: "\0020"; display: block; height: 0; visibility: hidden;} 
.clearfix:after, .form-row:after {clear: both;}
.clearfix, .form-row {zoom: 1;}

